add admin cud ingredient + doc
